# baseclass

./: .gitignore  execute_tests.bat  pyproject.toml
baseclass/: __init__.py  _baseclass.py  baseclasses.py
baseclass.egg-info/: PKG-INFO
baseclass/tests/: test_baseclasses.py
