[project]
name = "mespe"
version = "0.0.2"
authors = [{name="The Absolute Tinkerer", email="none-provided@none-provided.com"}]
description = "A simple Publisher-Subscriber Messaging Pipeline"
readme = "README.md"
requires-python = ">3.9.12"
classifiers = ["Programming Language :: Python :: 3",
               "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
               "Operating System :: OS Independent"]

[project.urls]
Homepage = "https://github.com/Absolute-Tinkerer"
Issues = "https://github.com/Absolute-Tinkerer"

[build-system]
requires = ["setuptools>=61.2.0"]
build-backend = "setuptools.build_meta"